[fix bug 1779450] FF: clicking inside x-scrolling or y-scrolling table caused the focus outline to show the opposite scrollbar. Hiding the outline prevents this.

--- a/widget/datatable/src/css/datatable-core.css
+++ b/widget/datatable/src/css/datatable-core.css
@@ -21,6 +21,10 @@
     left:-1500px;
 }
 
+.yui-dt-scrollable tbody {
+    -moz-outline:none;
+}
+
 /* draggable columns */
 .yui-dt-draggable {
     cursor: move;
